Fix #1770 by setting color-scheme in dark mode

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -619,6 +619,7 @@ video {
   --card-multi: 92 88 9;
   --card-colorless: 60 58 64;
   --card-lands: 95 58 36;
+  color-scheme: dark;
 }
 
 .container {
