--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -107,7 +107,7 @@
 }
 
 /*
-! tailwindcss v3.4.13 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.15 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -541,7 +541,7 @@ video {
 
 /* Make elements with the HTML hidden attribute stay hidden by default */
 
-[hidden] {
+[hidden]:where(:not([hidden="until-found"])) {
   display: none;
 }
 
@@ -1486,6 +1486,18 @@ video {
   margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-x-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
 .self-center {
   align-self: center;
 }
@@ -1609,72 +1621,72 @@ video {
 
 .border-blue-600 {
   --tw-border-opacity: 1;
-  border-color: rgb(37 99 235 / var(--tw-border-opacity));
+  border-color: rgb(37 99 235 / var(--tw-border-opacity, 1));
 }
 
 .border-border {
   --tw-border-opacity: 1;
-  border-color: rgb(var(--border) / var(--tw-border-opacity));
+  border-color: rgb(var(--border) / var(--tw-border-opacity, 1));
 }
 
 .border-border-secondary {
   --tw-border-opacity: 1;
-  border-color: rgb(var(--border-secondary) / var(--tw-border-opacity));
+  border-color: rgb(var(--border-secondary) / var(--tw-border-opacity, 1));
 }
 
 .border-button-accent {
   --tw-border-opacity: 1;
-  border-color: rgb(var(--button-accent) / var(--tw-border-opacity));
+  border-color: rgb(var(--button-accent) / var(--tw-border-opacity, 1));
 }
 
 .border-button-accent-active {
   --tw-border-opacity: 1;
-  border-color: rgb(var(--button-accent-active) / var(--tw-border-opacity));
+  border-color: rgb(var(--button-accent-active) / var(--tw-border-opacity, 1));
 }
 
 .border-button-danger {
   --tw-border-opacity: 1;
-  border-color: rgb(var(--button-danger) / var(--tw-border-opacity));
+  border-color: rgb(var(--button-danger) / var(--tw-border-opacity, 1));
 }
 
 .border-button-danger-active {
   --tw-border-opacity: 1;
-  border-color: rgb(var(--button-danger-active) / var(--tw-border-opacity));
+  border-color: rgb(var(--button-danger-active) / var(--tw-border-opacity, 1));
 }
 
 .border-button-primary {
   --tw-border-opacity: 1;
-  border-color: rgb(var(--button-primary) / var(--tw-border-opacity));
+  border-color: rgb(var(--button-primary) / var(--tw-border-opacity, 1));
 }
 
 .border-button-primary-active {
   --tw-border-opacity: 1;
-  border-color: rgb(var(--button-primary-active) / var(--tw-border-opacity));
+  border-color: rgb(var(--button-primary-active) / var(--tw-border-opacity, 1));
 }
 
 .border-button-secondary {
   --tw-border-opacity: 1;
-  border-color: rgb(var(--button-secondary) / var(--tw-border-opacity));
+  border-color: rgb(var(--button-secondary) / var(--tw-border-opacity, 1));
 }
 
 .border-focus-ring {
   --tw-border-opacity: 1;
-  border-color: rgb(var(--focus-ring) / var(--tw-border-opacity));
+  border-color: rgb(var(--focus-ring) / var(--tw-border-opacity, 1));
 }
 
 .border-gray-300 {
   --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
 }
 
 .border-green-500 {
   --tw-border-opacity: 1;
-  border-color: rgb(34 197 94 / var(--tw-border-opacity));
+  border-color: rgb(34 197 94 / var(--tw-border-opacity, 1));
 }
 
 .border-red-500 {
   --tw-border-opacity: 1;
-  border-color: rgb(239 68 68 / var(--tw-border-opacity));
+  border-color: rgb(239 68 68 / var(--tw-border-opacity, 1));
 }
 
 .border-transparent {
@@ -1683,137 +1695,137 @@ video {
 
 .bg-advert {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--advert) / var(--tw-bg-opacity));
+  background-color: rgb(var(--advert) / var(--tw-bg-opacity, 1));
 }
 
 .bg-article {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--article) / var(--tw-bg-opacity));
+  background-color: rgb(var(--article) / var(--tw-bg-opacity, 1));
 }
 
 .bg-bg {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--bg) / var(--tw-bg-opacity));
+  background-color: rgb(var(--bg) / var(--tw-bg-opacity, 1));
 }
 
 .bg-bg-accent {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--bg-accent) / var(--tw-bg-opacity));
+  background-color: rgb(var(--bg-accent) / var(--tw-bg-opacity, 1));
 }
 
 .bg-bg-active {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--bg-active) / var(--tw-bg-opacity));
+  background-color: rgb(var(--bg-active) / var(--tw-bg-opacity, 1));
 }
 
 .bg-bg-secondary {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--bg-secondary) / var(--tw-bg-opacity));
+  background-color: rgb(var(--bg-secondary) / var(--tw-bg-opacity, 1));
 }
 
 .bg-black {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
 .bg-blue-100 {
   --tw-bg-opacity: 1;
-  background-color: rgb(219 234 254 / var(--tw-bg-opacity));
+  background-color: rgb(219 234 254 / var(--tw-bg-opacity, 1));
 }
 
 .bg-button-accent {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--button-accent) / var(--tw-bg-opacity));
+  background-color: rgb(var(--button-accent) / var(--tw-bg-opacity, 1));
 }
 
 .bg-button-danger {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--button-danger) / var(--tw-bg-opacity));
+  background-color: rgb(var(--button-danger) / var(--tw-bg-opacity, 1));
 }
 
 .bg-button-primary {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--button-primary) / var(--tw-bg-opacity));
+  background-color: rgb(var(--button-primary) / var(--tw-bg-opacity, 1));
 }
 
 .bg-button-secondary {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--button-secondary) / var(--tw-bg-opacity));
+  background-color: rgb(var(--button-secondary) / var(--tw-bg-opacity, 1));
 }
 
 .bg-button-secondary-active {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--button-secondary-active) / var(--tw-bg-opacity));
+  background-color: rgb(var(--button-secondary-active) / var(--tw-bg-opacity, 1));
 }
 
 .bg-card-black {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--card-black) / var(--tw-bg-opacity));
+  background-color: rgb(var(--card-black) / var(--tw-bg-opacity, 1));
 }
 
 .bg-card-blue {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--card-blue) / var(--tw-bg-opacity));
+  background-color: rgb(var(--card-blue) / var(--tw-bg-opacity, 1));
 }
 
 .bg-card-colorless {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--card-colorless) / var(--tw-bg-opacity));
+  background-color: rgb(var(--card-colorless) / var(--tw-bg-opacity, 1));
 }
 
 .bg-card-green {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--card-green) / var(--tw-bg-opacity));
+  background-color: rgb(var(--card-green) / var(--tw-bg-opacity, 1));
 }
 
 .bg-card-lands {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--card-lands) / var(--tw-bg-opacity));
+  background-color: rgb(var(--card-lands) / var(--tw-bg-opacity, 1));
 }
 
 .bg-card-multi {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--card-multi) / var(--tw-bg-opacity));
+  background-color: rgb(var(--card-multi) / var(--tw-bg-opacity, 1));
 }
 
 .bg-card-red {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--card-red) / var(--tw-bg-opacity));
+  background-color: rgb(var(--card-red) / var(--tw-bg-opacity, 1));
 }
 
 .bg-card-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--card-white) / var(--tw-bg-opacity));
+  background-color: rgb(var(--card-white) / var(--tw-bg-opacity, 1));
 }
 
 .bg-gray-100 {
   --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
 }
 
 .bg-gray-800 {
   --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
 }
 
 .bg-green-100 {
   --tw-bg-opacity: 1;
-  background-color: rgb(220 252 231 / var(--tw-bg-opacity));
+  background-color: rgb(220 252 231 / var(--tw-bg-opacity, 1));
 }
 
 .bg-podcast {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--podcast) / var(--tw-bg-opacity));
+  background-color: rgb(var(--podcast) / var(--tw-bg-opacity, 1));
 }
 
 .bg-red-100 {
   --tw-bg-opacity: 1;
-  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
+  background-color: rgb(254 226 226 / var(--tw-bg-opacity, 1));
 }
 
 .bg-teal-100 {
   --tw-bg-opacity: 1;
-  background-color: rgb(204 251 241 / var(--tw-bg-opacity));
+  background-color: rgb(204 251 241 / var(--tw-bg-opacity, 1));
 }
 
 .bg-transparent {
@@ -1822,27 +1834,17 @@ video {
 
 .bg-video {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--video) / var(--tw-bg-opacity));
+  background-color: rgb(var(--video) / var(--tw-bg-opacity, 1));
 }
 
 .bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
 .bg-yellow-100 {
   --tw-bg-opacity: 1;
-  background-color: rgb(254 249 195 / var(--tw-bg-opacity));
-}
-
-.bg-gray-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}
-
-.bg-red-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+  background-color: rgb(254 249 195 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-50 {
@@ -2115,112 +2117,112 @@ video {
 
 .text-blue-800 {
   --tw-text-opacity: 1;
-  color: rgb(30 64 175 / var(--tw-text-opacity));
+  color: rgb(30 64 175 / var(--tw-text-opacity, 1));
 }
 
 .text-border {
   --tw-text-opacity: 1;
-  color: rgb(var(--border) / var(--tw-text-opacity));
+  color: rgb(var(--border) / var(--tw-text-opacity, 1));
 }
 
 .text-button-accent {
   --tw-text-opacity: 1;
-  color: rgb(var(--button-accent) / var(--tw-text-opacity));
+  color: rgb(var(--button-accent) / var(--tw-text-opacity, 1));
 }
 
 .text-button-danger {
   --tw-text-opacity: 1;
-  color: rgb(var(--button-danger) / var(--tw-text-opacity));
+  color: rgb(var(--button-danger) / var(--tw-text-opacity, 1));
 }
 
 .text-button-primary {
   --tw-text-opacity: 1;
-  color: rgb(var(--button-primary) / var(--tw-text-opacity));
+  color: rgb(var(--button-primary) / var(--tw-text-opacity, 1));
 }
 
 .text-button-primary-active {
   --tw-text-opacity: 1;
-  color: rgb(var(--button-primary-active) / var(--tw-text-opacity));
+  color: rgb(var(--button-primary-active) / var(--tw-text-opacity, 1));
 }
 
 .text-button-secondary {
   --tw-text-opacity: 1;
-  color: rgb(var(--button-secondary) / var(--tw-text-opacity));
+  color: rgb(var(--button-secondary) / var(--tw-text-opacity, 1));
 }
 
 .text-button-text {
   --tw-text-opacity: 1;
-  color: rgb(var(--button-text) / var(--tw-text-opacity));
+  color: rgb(var(--button-text) / var(--tw-text-opacity, 1));
 }
 
 .text-gray-500 {
   --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
+  color: rgb(107 114 128 / var(--tw-text-opacity, 1));
 }
 
 .text-gray-700 {
   --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
+  color: rgb(55 65 81 / var(--tw-text-opacity, 1));
 }
 
 .text-gray-800 {
   --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
+  color: rgb(31 41 55 / var(--tw-text-opacity, 1));
 }
 
 .text-green-800 {
   --tw-text-opacity: 1;
-  color: rgb(22 101 52 / var(--tw-text-opacity));
+  color: rgb(22 101 52 / var(--tw-text-opacity, 1));
 }
 
 .text-link {
   --tw-text-opacity: 1;
-  color: rgb(var(--link) / var(--tw-text-opacity));
+  color: rgb(var(--link) / var(--tw-text-opacity, 1));
 }
 
 .text-red-800 {
   --tw-text-opacity: 1;
-  color: rgb(153 27 27 / var(--tw-text-opacity));
+  color: rgb(153 27 27 / var(--tw-text-opacity, 1));
 }
 
 .text-teal-800 {
   --tw-text-opacity: 1;
-  color: rgb(17 94 89 / var(--tw-text-opacity));
+  color: rgb(17 94 89 / var(--tw-text-opacity, 1));
 }
 
 .text-text {
   --tw-text-opacity: 1;
-  color: rgb(var(--text) / var(--tw-text-opacity));
+  color: rgb(var(--text) / var(--tw-text-opacity, 1));
 }
 
 .text-text-secondary {
   --tw-text-opacity: 1;
-  color: rgb(var(--text-secondary) / var(--tw-text-opacity));
+  color: rgb(var(--text-secondary) / var(--tw-text-opacity, 1));
 }
 
 .text-text-secondary-active {
   --tw-text-opacity: 1;
-  color: rgb(var(--text-secondary-active) / var(--tw-text-opacity));
+  color: rgb(var(--text-secondary-active) / var(--tw-text-opacity, 1));
 }
 
 .text-white {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
 .text-yellow-500 {
   --tw-text-opacity: 1;
-  color: rgb(234 179 8 / var(--tw-text-opacity));
+  color: rgb(234 179 8 / var(--tw-text-opacity, 1));
 }
 
 .text-yellow-800 {
   --tw-text-opacity: 1;
-  color: rgb(133 77 14 / var(--tw-text-opacity));
+  color: rgb(133 77 14 / var(--tw-text-opacity, 1));
 }
 
 .placeholder-text-secondary::placeholder {
   --tw-placeholder-opacity: 1;
-  color: rgb(var(--text-secondary) / var(--tw-placeholder-opacity));
+  color: rgb(var(--text-secondary) / var(--tw-placeholder-opacity, 1));
 }
 
 .opacity-0 {
@@ -2277,7 +2279,7 @@ video {
 
 .ring-focus-ring {
   --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(var(--focus-ring) / var(--tw-ring-opacity));
+  --tw-ring-color: rgb(var(--focus-ring) / var(--tw-ring-opacity, 1));
 }
 
 .invert {
@@ -2673,107 +2675,107 @@ img.mana-symbol-sm {
 
 .hover\:border-border-active:hover {
   --tw-border-opacity: 1;
-  border-color: rgb(var(--border-active) / var(--tw-border-opacity));
+  border-color: rgb(var(--border-active) / var(--tw-border-opacity, 1));
 }
 
 .hover\:border-button-accent-active:hover {
   --tw-border-opacity: 1;
-  border-color: rgb(var(--button-accent-active) / var(--tw-border-opacity));
+  border-color: rgb(var(--button-accent-active) / var(--tw-border-opacity, 1));
 }
 
 .hover\:border-button-danger-active:hover {
   --tw-border-opacity: 1;
-  border-color: rgb(var(--button-danger-active) / var(--tw-border-opacity));
+  border-color: rgb(var(--button-danger-active) / var(--tw-border-opacity, 1));
 }
 
 .hover\:border-button-primary-active:hover {
   --tw-border-opacity: 1;
-  border-color: rgb(var(--button-primary-active) / var(--tw-border-opacity));
+  border-color: rgb(var(--button-primary-active) / var(--tw-border-opacity, 1));
 }
 
 .hover\:bg-bg-active:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--bg-active) / var(--tw-bg-opacity));
+  background-color: rgb(var(--bg-active) / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-button-accent:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--button-accent) / var(--tw-bg-opacity));
+  background-color: rgb(var(--button-accent) / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-button-accent-active:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--button-accent-active) / var(--tw-bg-opacity));
+  background-color: rgb(var(--button-accent-active) / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-button-danger:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--button-danger) / var(--tw-bg-opacity));
+  background-color: rgb(var(--button-danger) / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-button-danger-active:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--button-danger-active) / var(--tw-bg-opacity));
+  background-color: rgb(var(--button-danger-active) / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-button-primary:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--button-primary) / var(--tw-bg-opacity));
+  background-color: rgb(var(--button-primary) / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-button-primary-active:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--button-primary-active) / var(--tw-bg-opacity));
+  background-color: rgb(var(--button-primary-active) / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-button-secondary:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--button-secondary) / var(--tw-bg-opacity));
+  background-color: rgb(var(--button-secondary) / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-button-secondary-active:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(var(--button-secondary-active) / var(--tw-bg-opacity));
+  background-color: rgb(var(--button-secondary-active) / var(--tw-bg-opacity, 1));
 }
 
 .hover\:text-button-primary:hover {
   --tw-text-opacity: 1;
-  color: rgb(var(--button-primary) / var(--tw-text-opacity));
+  color: rgb(var(--button-primary) / var(--tw-text-opacity, 1));
 }
 
 .hover\:text-button-primary-active:hover {
   --tw-text-opacity: 1;
-  color: rgb(var(--button-primary-active) / var(--tw-text-opacity));
+  color: rgb(var(--button-primary-active) / var(--tw-text-opacity, 1));
 }
 
 .hover\:text-button-text:hover {
   --tw-text-opacity: 1;
-  color: rgb(var(--button-text) / var(--tw-text-opacity));
+  color: rgb(var(--button-text) / var(--tw-text-opacity, 1));
 }
 
 .hover\:text-link-active:hover {
   --tw-text-opacity: 1;
-  color: rgb(var(--link-active) / var(--tw-text-opacity));
+  color: rgb(var(--link-active) / var(--tw-text-opacity, 1));
 }
 
 .hover\:text-text-secondary:hover {
   --tw-text-opacity: 1;
-  color: rgb(var(--text-secondary) / var(--tw-text-opacity));
+  color: rgb(var(--text-secondary) / var(--tw-text-opacity, 1));
 }
 
 .hover\:text-text-secondary-active:hover {
   --tw-text-opacity: 1;
-  color: rgb(var(--text-secondary-active) / var(--tw-text-opacity));
+  color: rgb(var(--text-secondary-active) / var(--tw-text-opacity, 1));
 }
 
 .focus\:border-button-text:focus {
   --tw-border-opacity: 1;
-  border-color: rgb(var(--button-text) / var(--tw-border-opacity));
+  border-color: rgb(var(--button-text) / var(--tw-border-opacity, 1));
 }
 
 .focus\:border-focus-ring:focus {
   --tw-border-opacity: 1;
-  border-color: rgb(var(--focus-ring) / var(--tw-border-opacity));
+  border-color: rgb(var(--focus-ring) / var(--tw-border-opacity, 1));
 }
 
 .focus\:outline-none:focus {
@@ -2789,17 +2791,17 @@ img.mana-symbol-sm {
 
 .focus\:ring-focus-ring:focus {
   --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(var(--focus-ring) / var(--tw-ring-opacity));
+  --tw-ring-color: rgb(var(--focus-ring) / var(--tw-ring-opacity, 1));
 }
 
 .focus\:ring-green-500:focus {
   --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(34 197 94 / var(--tw-ring-opacity));
+  --tw-ring-color: rgb(34 197 94 / var(--tw-ring-opacity, 1));
 }
 
 .focus\:ring-red-500:focus {
   --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity));
+  --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity, 1));
 }
 
 .focus\:ring-opacity-50:focus {
