--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1670,6 +1670,11 @@ video {
   border-color: rgb(var(--focus-ring) / var(--tw-border-opacity));
 }
 
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
