--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1189,6 +1189,10 @@ video {
   animation: spin 1s linear infinite;
 }
 
+.cursor-grab {
+  cursor: grab;
+}
+
 .cursor-not-allowed {
   cursor: not-allowed;
 }
@@ -2537,9 +2541,9 @@ img.mana-symbol-sm {
 
 @media (min-width: 0px) {
   .table-view-col {
-    width: 40%;
-    min-width: 40%;
-    max-width: 40%;
+    width: 33.33%;
+    min-width: 33.33%;
+    max-width: 33.33%;
   }
 }
 
