--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1846,11 +1846,6 @@ video {
   background-color: rgb(var(--video) / var(--tw-bg-opacity));
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .bg-yellow-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 249 195 / var(--tw-bg-opacity));
@@ -1966,16 +1961,16 @@ video {
   padding-bottom: 3px;
 }
 
-.pb-0 {
-  padding-bottom: 0px;
-}
-
 .pb-1 {
   padding-bottom: 0.25rem;
 }
 
 .pb-2 {
   padding-bottom: 0.5rem;
+}
+
+.pb-20 {
+  padding-bottom: 5rem;
 }
 
 .pb-3 {
@@ -2012,10 +2007,6 @@ video {
 
 .pl-4 {
   padding-left: 1rem;
-}
-
-.pr-0 {
-  padding-right: 0px;
 }
 
 .pr-1 {
@@ -2112,10 +2103,6 @@ video {
 
 .font-bold {
   font-weight: 700;
-}
-
-.font-light {
-  font-weight: 300;
 }
 
 .font-medium {
@@ -2313,6 +2300,11 @@ video {
 
 .brightness-125 {
   --tw-brightness: brightness(1.25);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.brightness-90 {
+  --tw-brightness: brightness(.9);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -2565,9 +2557,9 @@ img.mana-symbol-sm {
 
 @media (min-width: 768px) {
   .table-view-col {
-    width: 20%;
-    min-width: 20%;
-    max-width: 20%;
+    width: 25%;
+    min-width: 25%;
+    max-width: 25%;
   }
 }
 
@@ -2575,29 +2567,9 @@ img.mana-symbol-sm {
 
 @media (min-width: 1024px) {
   .table-view-col {
-    width: 12%;
-    min-width: 12%;
+    width: 12.5%;
+    min-width: 12.5%;
     max-width: 12.5%;
-  }
-}
-
-/* Extra large screens (xl) */
-
-@media (min-width: 1280px) {
-  .table-view-col {
-    width: 11.11%;
-    min-width: 11.11%;
-    max-width: 11.11%;
-  }
-}
-
-/* Extra extra large screens (xxl) */
-
-@media (min-width: 1536px) {
-  .table-view-col {
-    width: 10%;
-    min-width: 10%;
-    max-width: 10%;
   }
 }
 
@@ -2912,6 +2884,11 @@ img.mana-symbol-sm {
 
 .hover\:brightness-125:hover {
   --tw-brightness: brightness(1.25);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.hover\:brightness-90:hover {
+  --tw-brightness: brightness(.9);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
