--- a/emails/confirm_email/html.pug
+++ b/emails/confirm_email/html.pug
@@ -24,5 +24,5 @@ html
                                                         | Please use the following link to confirm the email you have on your account:
                                                 tr
                                                     td(style='padding: 20px 0 30px 0; font-size: 16px; line-height: 20px;')
-                                                        a(class="button", href="https://cubecobra.com/user/register/confirm/"+id style="display: inline-block; padding: 0.375rem 0.75rem; border: 1 solid transparent; border-radius: 0.25rem; color: #fff; background-color: #28a745; border-color: #28a745; text-decoration: none;")
+                                                        a(class="button", href="https://cubecobra.com/user/register/confirm/"+id+"/"+token style="display: inline-block; padding: 0.375rem 0.75rem; border: 1 solid transparent; border-radius: 0.25rem; color: #fff; background-color: #28a745; border-color: #28a745; text-decoration: none;")
                                                             | Confirm Account
