Add auto margins around images centered in markdown rendering.
Feels like there should be some flex solution but I couldn't figure it
out without breaking something else. The auto margin matches the old
style behaviour and works well.

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -2589,6 +2589,12 @@ img.mana-symbol-sm {
   margin-bottom: 1rem;
 }
 
+/* Add margin to images rendered within centered markdown blocks */
+
+.markdown .text-center .markdown-card-image {
+  margin: auto;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
