--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -289,3 +289,8 @@ img.mana-symbol-sm {
 	display: inline-block;
 	margin-bottom: 1rem;
 }
+
+/* Add margin to images rendered within centered markdown blocks */
+.markdown .text-center .markdown-card-image {
+	margin: auto;
+}
