Commit compiled stylesheet.

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -2599,6 +2599,13 @@ img.mana-symbol-sm {
   margin: auto;
 }
 
+/* Used in conjunction with DraggableCard and DndContext. Per https: //docs.dndkit.com/api-documentation/sensors/pointer#touch-action turns off
+* the mobile browser's default touch actions on elements with the class, which is necessary for dragging to work as expected with DndContext. */
+
+.no-touch-action {
+  touch-action: none;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
