Commit compiled stylesheet.

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1210,6 +1210,10 @@ video {
           user-select: none;
 }
 
+.resize {
+  resize: both;
+}
+
 .list-inside {
   list-style-position: inside;
 }
