--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -3172,6 +3172,14 @@ img.mana-symbol-sm {
     display: none;
   }
 
+  .md\:w-1\/2 {
+    width: 50%;
+  }
+
+  .md\:w-full {
+    width: 100%;
+  }
+
   .md\:max-w-screen-md {
     max-width: 768px;
   }
@@ -3297,8 +3305,20 @@ img.mana-symbol-sm {
     display: none;
   }
 
+  .lg\:w-1\/2 {
+    width: 50%;
+  }
+
   .lg\:w-1\/4 {
     width: 25%;
+  }
+
+  .lg\:w-3\/4 {
+    width: 75%;
+  }
+
+  .lg\:w-full {
+    width: 100%;
   }
 
   .lg\:max-w-screen-lg {
@@ -3454,6 +3474,26 @@ img.mana-symbol-sm {
 
   .xl\:hidden {
     display: none;
+  }
+
+  .xl\:w-1\/5 {
+    width: 20%;
+  }
+
+  .xl\:w-2\/5 {
+    width: 40%;
+  }
+
+  .xl\:w-3\/5 {
+    width: 60%;
+  }
+
+  .xl\:w-4\/5 {
+    width: 80%;
+  }
+
+  .xl\:w-full {
+    width: 100%;
   }
 
   .xl\:max-w-screen-xl {
@@ -3631,6 +3671,26 @@ img.mana-symbol-sm {
 
   .\33xl\:hidden {
     display: none;
+  }
+
+  .\33xl\:w-1\/2 {
+    width: 50%;
+  }
+
+  .\33xl\:w-1\/3 {
+    width: 33.333333%;
+  }
+
+  .\33xl\:w-1\/6 {
+    width: 16.666667%;
+  }
+
+  .\33xl\:w-2\/3 {
+    width: 66.666667%;
+  }
+
+  .\33xl\:w-5\/6 {
+    width: 83.333333%;
   }
 
   .\33xl\:max-w-screen-3xl {
