Split chunks into commons and vendors bundles. The most common src/ ends up in commons, where the node modules are in vendors.
There seems to be some problems with tree-shaking, unsure.

--- a/views/main.pug
+++ b/views/main.pug
@@ -45,4 +45,5 @@ html(lang='en' class=theme)
  
 		script(type='text/javascript').
 			window.reactProps = !{reactProps};
-		script(src='/js/'+page+'.bundle.js')
+		each src in bundles
+			script(src=src)
