--- a/src/client/css/stylesheet.css
+++ b/src/client/css/stylesheet.css
@@ -279,14 +279,12 @@ img.mana-symbol-sm {
   }
 }
 
-/* Loose lists (https: //spec.commonmark.org/0.31.2/#lists) have a <p> within the list items. Using inline-block and bottom margin
-* results in a blank line after the list item, and in conjunction with list-style-position: inside on the list element itself
-* ensures the <p> content starts on the same line as the item marker (eg 1 or *). Without inline-block, the list-style-position would
-* move the item content to the next line.
+/* Loose lists (https: //spec.commonmark.org/0.31.2/#lists) have a <p> within the list items. Use bottom margin to emulate
+* a blank line after the list item. No longer using list-style-position: inside with it, so don't have to muck with inline-block
+* to prevent the <p> from starting one a new line after the marker.
 */
 .markdown ul p,
 .markdown ol p {
-	display: inline-block;
 	margin-bottom: 1rem;
 }
 
