--- a/emails/content_decline/html.pug
+++ b/emails/content_decline/html.pug
@@ -11,7 +11,7 @@ html
                             tbody
                                 tr
                                     td(align='center', bgcolor='#343A40', style='padding: 40px 0 30px 0; color: #ffffff; font-size: 28px; font-weight: bold; font-family: Arial, sans-serif;')
-                                        img(src='https://cubecobra.com/content/banner.png', alt='Cube Cobra', height='50', style='display: block;')
+                                        img(src=`${base_url}/content/banner.png`, alt='Cube Cobra', height='50', style='display: block;')
                                 tr
                                     td(bgcolor='#ffffff', style='padding: 40px 30px 40px 30px;')
                                         table(border='0', cellpadding='0', cellspacing='0', width='100%')
