--- a/emails/password_reset/html.pug
+++ b/emails/password_reset/html.pug
@@ -11,7 +11,7 @@ html
                             tbody
                                 tr
                                     td(align='center', bgcolor='#343A40', style='padding: 40px 0 30px 0; color: #ffffff; font-size: 28px; font-weight: bold; font-family: Arial, sans-serif;')
-                                        img(src=`${base_url}/content/banner.png`, alt='Cube Cobra', height='50', style='display: block;')
+                                        img(src=`${baseUrl}/content/banner.png`, alt='Cube Cobra', height='50', style='display: block;')
                                 tr
                                     td(bgcolor='#ffffff', style='padding: 40px 30px 40px 30px;')
                                         table(border='0', cellpadding='0', cellspacing='0', width='100%')
@@ -24,5 +24,5 @@ html
                                                         | If you did not request a password reset, please ignore this email.
                                                 tr
                                                     td(style='padding: 20px 0 30px 0; font-size: 16px; line-height: 20px;')
-                                                        a(class="button", href=`${base_url}/user/passwordreset/${id}` style="display: inline-block; padding: 0.375rem 0.75rem; border: 1 solid transparent; border-radius: 0.25rem; color: #fff; background-color: #28a745; border-color: #28a745; text-decoration: none;")
+                                                        a(class="button", href=`${baseUrl}/user/passwordreset/${id}` style="display: inline-block; padding: 0.375rem 0.75rem; border: 1 solid transparent; border-radius: 0.25rem; color: #fff; background-color: #28a745; border-color: #28a745; text-decoration: none;")
                                                             | Reset password
