--- a/src/client/css/stylesheet.css
+++ b/src/client/css/stylesheet.css
@@ -4,7 +4,46 @@
 
 @layer base {
 
+	/* festive */
   :root {
+    --bg: 240 240 240;
+		--bg-active: 233 233 233;
+    --bg-secondary: 52 58 64;
+		--bg-accent:  250 250 250;
+		--text-secondary: 128 128 128;
+		--text-secondary-active: 255 255 255;
+		--border: 212 212 212;
+		--border-active : 180 180 180;
+		--border-secondary: 187 187 187;
+		--text: 33 37 41;
+		--link: 0 123 255;
+		--link-active: 0 86 179;
+		--button-text: 255 255 255;
+		--button-text-secondary: 33 37 41;
+		--button-primary: 8 119 21;
+		--button-primary-active : 0 75 13;
+		--button-danger: 188 21 37;
+		--button-danger-active: 139 0 0;
+		--button-accent: 0 123 255;
+		--button-accent-active: 0 86 179;
+		--button-secondary: 108 117 125;
+		--button-secondary-active: 74 80 87;
+		--focus-ring: 3 102 214;
+		--advert: 251 241 185;
+		--article : 116 198 135;
+		--podcast: 64 154 191;
+		--video: 254 66 66;
+		--card-white: 255 255 235;
+		--card-blue:  212 237 255;
+		--card-black: 214 204 214;
+		--card-red: 255 200 200;
+		--card-green: 233 255 212;
+		--card-multi: 252 248 169;
+		--card-colorless: 233 231 235;
+		--card-lands: 255 224 192;
+  }
+
+	:root[class~="light"] {
     --bg: 240 240 240;
 		--bg-active: 233 233 233;
     --bg-secondary: 52 58 64;
